As suggested by Sverre Froyen in a follow-up to PR # 41698, change the sensor names to real words (e.g. "temperature 1" instead of "TEMP_1"). No functional change; only consistent envstat(8) output with other sensors.